--- a/customer_agent/test_page.html
+++ b/customer_agent/test_page.html
@@ -47,8 +47,8 @@
             border-radius: 4px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
-            max-height: 500px;
-            overflow-y: auto;
+            /* max-height: 500px;
+            overflow-y: auto; */
             font-size: 14px;
         }
         .loading {
